# AI-powered-job-recommendation-system

./: .gitignore  README.md  pyproject.toml
ai_model/embedding/: __init__.py  job_embeddings.py
ai_model/embedding/embedding_model/: EmbeddingService.py  __init__.py  base_provider.py  cohere_provider.py  config.py
ai_model/feature_engineering/: __init__.py  pipeline.py
ai_model/feature_engineering/utils/: __init__.py  experience.py  qualifications.py  salary.py  text_processing.py  work_type.py
ai_model/notebooks/: eda_analysis.ipynb  feature_engineering_comprehensive.ipynb
ai_model/recommendation/: core_recommendation.py
ai_model/recommendation/filter/: __init__.py  filter_manager.py
ai_model/recommendation/filter/filters/: __init__.py  base_filter.py  education_filter.py  gender_filter.py  work_type_filter.py
ai_model/recommendation/score/: __init__.py  scoring_manager.py
ai_model/salary_predection/: salary_prediction_training.ipynb
backend/app/api/: main.py
backend/app/core/: path_utils.py
backend/app/model/: schemas.py
backend/app/tests/: test_get_job_by_id.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Footer.tsx  Header.tsx  JobCard.tsx  MapPicker.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: HomePage.tsx  JobDetailsPage.tsx  JobRecommendPage.tsx  SalaryPredictPage.tsx
scripts/: process_10k_embeddings.py  reduce_dataset.py  sample_10k_dataset.py  test_embedding_sample.py  test_full_recommendation.py  worktypes.py
(+11 files in other folders)
